fixed footer jumping up

--- a/frontend/src/components/styles/footer.scss
+++ b/frontend/src/components/styles/footer.scss
@@ -12,7 +12,25 @@ footer {
 	position: relative;
 	width: 100%;
 	height: $footer-h;
-	background-color: black;
+	background: black;
+	overflow: hidden;
+
+	> * {
+		z-index: 10;
+	}
+
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		transform: translateY(-70%);
+		width: max(100svw, 100rem);
+		aspect-ratio: 1/1;
+		z-index: 3;
+		background: radial-gradient(circle at center, #2b2b2b 0%, #000000 50%, transparent 100%);
+		border-radius: 100%;
+	}
+
 	z-index: 10;
 	color: white;
 	font-size: 1rem;
