--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -1,6 +1,10 @@
 $main: (
 	"light": #f0ecfc,
 	"dark": #600dc6,
-	"header-h": 10svh,
+	"header-h": 14svh,
 	"footer-h": 23svh
 ) !default;
+
+main {
+	min-height: calc(100vh - map-get($main, "header-h") - map-get($main, "footer-h"));
+}
